todos los endpoints  terminados,falta la seguridad